feat: prestations V3 + galerie par presta + fullscreen preview, suppression portfolio, ajout contact

--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,12 @@
             <!-- Your main content is here-->
 
             <h1>CONTACT</h1>
-
             
         </div>
 
         <!-- <script src="js/main.js"></script> -->
         <script type="module" src="JS/app.js"></script>
+        <script type="module" src="JS/contact.js"></script>
 
     </body>
 </html>
