--- a/index.html
+++ b/index.html
@@ -19,20 +19,15 @@
 
         <div id="main" class="main">
             <!-- Your main content is here-->
-            <div class="category category--main category--prestations">
+            <div class="main-intro-area">
+                <p class="main-intro">Maquillage à domicile et en déplacement sur le Calaisis et la Côte d'Opale.</p>
+            </div>
+
+            <div class="category category--prestations">
                 <div class="category__sub-div" onclick="openPageFromHome('prestations')">
                     <div id="prestationsColorDiv" class="category__sub-div__colored-sub-div sub-div--prestations"></div>
                     <div id="prestationsTextDiv" class="category__sub-div__sub-div">
                         <span>PRESTATIONS</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="category category--portfolio">
-                <div class="category__sub-div" onclick="openPageFromHome('portfolio')">
-                    <div id="portfolioColorDiv" class="category__sub-div__colored-sub-div  sub-div--portfolio"></div>
-                    <div id="portfolioTextDiv" class="category__sub-div__sub-div">
-                        <span>PORTFOLIO</span>
                     </div>
                 </div>
             </div>
