feat: modif accueil

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p class="main-intro">Maquillage à domicile et en déplacement sur le Calaisis et la Côte d'Opale.</p>
             </div>
 
-            <div class="category category--prestations">
+            <div class="category category--prestations category--main">
                 <div class="category__sub-div" onclick="openPageFromHome('prestations')">
                     <div id="prestationsColorDiv" class="category__sub-div__colored-sub-div sub-div--prestations"></div>
                     <div id="prestationsTextDiv" class="category__sub-div__sub-div">
