--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <div id="prestationsColorDiv" class="category__sub-div__colored-sub-div sub-div--prestations"></div>
                     <div id="prestationsTextDiv" class="category__sub-div__sub-div">
                         <span>PRESTATIONS</span>
+                        <p style="font-family: Inter var, sans-serif; margin-top: 20px; font-weight: 200; font-size: 14px; letter-spacing: 2px; line-height: 48px;">• Maquillages<br>• Mariages<br>• Cours</p>
                     </div>
                 </div>
             </div>
