feat: Description + fix: h3 cleaning

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="main" class="main">
             <!-- Your main content is here-->
             <div class="main-intro-area">
-                <p class="main-intro">Maquillage à domicile et en déplacement sur le Calaisis et la Côte d'Opale.</p>
+                <p class="main-intro">Passionné par le maquillage depuis mon adolescence et diplômé d'une formation "maquillage artistique" de l'école <a style="text-decoration: none; font-weight: 300;" href="http://www.metamake-up.com/">METAMORPHOSES</a> de Strasbourg depuis 2017, je suis à votre disposition pour répondre à toutes vos questions, et satisfaire au mieux votre demande.</p>
             </div>
 
             <div class="category category--prestations category--main">
