v 0.0.2 : modifs photos + legers fixs CSS + icone accueil + fb

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div id="prestationsColorDiv" class="category__sub-div__colored-sub-div sub-div--prestations"></div>
                     <div id="prestationsTextDiv" class="category__sub-div__sub-div">
                         <span>PRESTATIONS</span>
-                        <p style="font-family: Inter var, sans-serif; margin-top: 20px; font-weight: 200; font-size: 14px; letter-spacing: 2px; line-height: 48px;">• Maquillages<br>• Mariages<br>• Cours</p>
+                        <p style="font-family: Inter var, sans-serif; margin-top: 1vh; font-weight: 200; font-size: 14px; letter-spacing: 2px; line-height: 48px;">• Maquillages<br>• Mariages<br>• Cours</p>
                     </div>
                 </div>
             </div>
@@ -38,6 +38,7 @@
                     <div id="contactColorDiv" class="category__sub-div__colored-sub-div  sub-div--contact"></div>
                     <div id="contactTextDiv" class="category__sub-div__sub-div">
                         <span>CONTACT</span>
+                        <p style="font-family: Inter var, sans-serif; margin-top: 1vh; font-weight: 200; font-size: 12px; letter-spacing: 2px; line-height: 25px;">• Téléphone<br>• Mail<br>• Réseaux sociaux</p>
                     </div>
                 </div>
             </div>
