--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
         <meta name="description" content="Maquillage à domicile sur la côte d'opale">
         <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover">
         <meta name="theme-color" content="#007acc"/>
-        <link rel="preconnect" href="https://rsms.me/">
-        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     </head>
 
     <body id="body">
         
-        <header class="header"><img class="header__logo" src="./medias/images/logo_on_dark.png" /></header>
+        <header class="header"><img class="header__logo" src="./medias/images/logo_on_dark.svg" alt="Logo d'Opale Makeup', représentant un rond marron dans lequel se trouvent des formes géométriques de teintes de marron différentes qui forment un pinceau à poudre à tête ronde vue de profil et qui représentent également les initiales de l'entreprise (OMU)" /></header>
 
         <div id="main" class="main">
             <!-- Your main content is here-->
             <div class="main-intro-area">
-                <p class="main-intro">Passionné par le maquillage depuis mon adolescence et diplômé d'une formation "maquillage artistique" de l'école <a style="text-decoration: none; font-weight: 300;" href="http://www.metamake-up.com/">METAMORPHOSES</a> de Strasbourg depuis 2017, je suis à votre disposition pour répondre à toutes vos questions, et satisfaire au mieux votre demande en déplacement sur la Côte d'Opale.</p>
+                <p class="main-intro">
+                    Passionné par le maquillage depuis mon adolescence et diplômé d'une formation "maquillage artistique" de l'école <a style="text-decoration: none; font-weight: 300;" href="http://www.metamake-up.com/">METAMORPHOSES</a> de Strasbourg depuis 2017, je suis à votre disposition pour répondre à toutes vos questions, et satisfaire au mieux votre demande en déplacement sur la Côte d'Opale.
+                </p>
             </div>
 
             <div class="category category--prestations category--main">
@@ -28,7 +28,9 @@
                     <div id="prestationsColorDiv" class="category__sub-div__colored-sub-div sub-div--prestations"></div>
                     <div id="prestationsTextDiv" class="category__sub-div__sub-div">
                         <span>PRESTATIONS</span>
-                        <p style="font-family: Inter var, sans-serif; margin-top: 1vh; font-weight: 200; font-size: 14px; letter-spacing: 2px; line-height: 48px;">• Maquillages<br>• Mariages<br>• Cours</p>
+                        <p>
+                            • Maquillages<br>• Mariages<br>• Cours
+                        </p>
                     </div>
                 </div>
             </div>
@@ -38,15 +40,16 @@
                     <div id="contactColorDiv" class="category__sub-div__colored-sub-div  sub-div--contact"></div>
                     <div id="contactTextDiv" class="category__sub-div__sub-div">
                         <span>CONTACT</span>
-                        <p style="font-family: Inter var, sans-serif; margin-top: 1vh; font-weight: 200; font-size: 12px; letter-spacing: 2px; line-height: 25px;">• Téléphone<br>• Mail<br>• Réseaux sociaux</p>
+                        <p style="font-size: 12px; line-height: 25px;">
+                            • Téléphone<br>• Mail<br>• Réseaux sociaux
+                        </p>
                     </div>
                 </div>
             </div>
             
         </div>
 
-        <!-- <script src="js/main.js"></script> -->
-        <script type="module" src="JS/app.js"></script>
+        <script type="module" src="JS/index.js"></script>
 
     </body>
 </html>
