--- a/prestations.html
+++ b/prestations.html
@@ -9,13 +9,11 @@
         <meta name="description" content="Maquillage à domicile sur la côte d'opale">
         <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover">
         <meta name="theme-color" content="#007acc"/>
-        <link rel="preconnect" href="https://rsms.me/">
-        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     </head>
 
     <body id="body">
 
-        <header class="header"><img class="header__logo" src="./medias/images/logo_on_dark.png" onclick="goToHome()" /></header>
+        <header class="header"><img class="header__logo" src="./medias/images/logo_on_dark.svg" onclick="goToHome()" /></header>
 
         <div id="main" class="main">
             <!-- Your main content is here-->
@@ -25,8 +23,6 @@
             
         </div>
 
-        <!-- <script src="js/main.js"></script> -->
-        <script type="module" src="JS/app.js"></script>
         <script type="module" src="JS/prestations.js"></script>
 
     </body>
