--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 
     <body id="body">
         
-        <header class="header"><img class="header__logo" src="./medias/images/logo_on_dark.svg" alt="Logo d'Opale Makeup', représentant un rond marron dans lequel se trouvent des formes géométriques de teintes de marron différentes qui forment un pinceau à poudre à tête ronde vue de profil et qui représentent également les initiales de l'entreprise (OMU)" /></header>
+        <header class="header">
+            <img 
+                class="header__logo" 
+                src="./medias/images/logo_on_dark.svg" 
+                alt="Logo d'Opale Makeup', représentant un rond marron dans lequel se trouvent des formes géométriques de teintes de marron différentes qui forment un pinceau à poudre à tête ronde vue de profil et qui représentent également les initiales de l'entreprise (OMU)" 
+            />
+        </header>
 
         <div id="main" class="main">
             <!-- Your main content is here-->
