--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
         <title id="title"></title>
         <link rel="stylesheet" href="CSS/style.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
-        <!-- <link rel="apple-touch-icon" href="images/app_icon_152.png"> -->
         <meta name="description" content="Maquillage à domicile sur la côte d'opale">
         <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover">
         <meta name="theme-color" content="#007acc"/>
@@ -13,10 +12,16 @@
 
     <body id="body">
 
-        <header class="header"><img class="header__logo" src="./medias/images/logo_on_dark.svg" onclick="goToHome()" /></header>
+        <header class="header">
+            <img 
+                class="header__logo" 
+                src="./medias/images/logo_on_dark.svg" 
+                alt="Logo d'Opale Makeup', représentant un rond marron dans lequel se trouvent des formes géométriques de teintes de marron différentes qui forment un pinceau à poudre à tête ronde vue de profil et qui représentent également les initiales de l'entreprise (OMU)" 
+                onclick="goToHome()"
+            />
+        </header>
 
         <div id="main" class="main">
-            <!-- Your main content is here-->
 
             <h1>CONTACT</h1>
             
