--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="CSS/style.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <!-- <link rel="apple-touch-icon" href="images/app_icon_152.png"> -->
-        <meta name="description" content="Maquillage à domicile sur la côte d'opale">
+        <meta name="description" content="Prestations de maquillage en déplacement sur la Côte d'Opale (Boulogne-sur-Mer, Calais, Dunkerque, Guînes) : Maquillage Jour, Soirée, Mariage, Enfants, et cours">
         <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover">
         <meta name="theme-color" content="#007acc"/>
     </head>
@@ -29,26 +29,28 @@
                 </p>
             </div>
 
-            <div class="category category--prestations category--main">
-                <div class="category__sub-div" onclick="openPageFromHome('prestations')">
-                    <div id="prestationsColorDiv" class="category__sub-div__colored-sub-div sub-div--prestations"></div>
-                    <div id="prestationsTextDiv" class="category__sub-div__sub-div">
-                        <span>PRESTATIONS</span>
-                        <p>
-                            • Maquillages<br>• Mariages<br>• Cours
-                        </p>
+            <div class="categories-area">
+                <div class="category category--prestations category--main">
+                    <div class="category__sub-div" onclick="openPageFromHome('prestations')">
+                        <div id="prestationsColorDiv" class="category__sub-div__colored-sub-div sub-div--prestations"></div>
+                        <div id="prestationsTextDiv" class="category__sub-div__sub-div">
+                            <span>PRESTATIONS</span>
+                            <p>
+                                • Maquillages<br>• Mariages<br>• Cours
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="category category--contact">
-                <div class="category__sub-div" onclick="openPageFromHome('contact')">
-                    <div id="contactColorDiv" class="category__sub-div__colored-sub-div  sub-div--contact"></div>
-                    <div id="contactTextDiv" class="category__sub-div__sub-div">
-                        <span>CONTACT</span>
-                        <p style="font-size: 12px; line-height: 25px;">
-                            • Téléphone<br>• Mail<br>• Réseaux sociaux
-                        </p>
+    
+                <div class="category category--contact">
+                    <div class="category__sub-div" onclick="openPageFromHome('contact')">
+                        <div id="contactColorDiv" class="category__sub-div__colored-sub-div  sub-div--contact"></div>
+                        <div id="contactTextDiv" class="category__sub-div__sub-div">
+                            <span>CONTACT</span>
+                            <p class="contact-sub-div__p">
+                                • Téléphone<br>• Mail<br>• Réseaux sociaux
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
