--- a/prestations.html
+++ b/prestations.html
@@ -5,7 +5,7 @@
         <title id="title"></title>
         <link rel="stylesheet" href="CSS/style.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
-        <meta name="description" content="Maquillage à domicile sur la côte d'opale">
+        <meta name="description" content="Prestations proposées en déplacement : Maquillage Jour, Soirée, Mariage et invités (forfait avec coiffure), Enfants, et Cours individuels ou collectifs">
         <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover">
         <meta name="theme-color" content="#007acc"/>
     </head>
