--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title id="title"></title>
     <link rel="manifest" href="./manifest.json">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./medias/app-maskable-icons/app_icon_152.png">
     <meta name="description" content="Prestations de maquillage en déplacement sur la Côte d'Opale (Boulogne-sur-Mer, Calais, Dunkerque, Guînes) : Maquillage Jour, Soirée, Mariage, Enfants, et cours">
@@ -1077,7 +1077,7 @@
     <div id="photoViewerContainer" class="photo-viewer-container"></div>
 
     <script src="main.js"></script>
-    <script type="module" src="./js/app.js"></script>
+    <script type="module" src="./JS/app.js"></script>
     
   </body>
 </html>
